force-app/main/default/objects/Lead_Scoring_Rule__mdt/Lead_Scoring_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Lead Scoring Rule</label>
    <pluralLabel>Lead Scoring Rules</pluralLabel>
</CustomObject>