force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Max_Employees__c.field-meta.xml
<CustomField>
    <fullName>Max_Employees__c</fullName>
    <label>Max Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>