force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Min_Employees__c.field-meta.xml
<CustomField>
    <fullName>Min_Employees__c</fullName>
    <label>Min Employees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>